fix gaps bellow header

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -7,7 +7,7 @@
   top: 0;
   width: 100%;
   z-index: 999;
-  padding: 11.5px 40px;
+  padding: 13.5px 40px;
   display: grid;
   align-items: center;
   grid-template-columns: auto auto;
@@ -381,8 +381,8 @@
   }
 
   .blockie-lg {
-    width: 40px;
-    height: 40px;
+    width: 40px !important;
+    height: 40px !important;
     border-radius: 50%;
     object-fit: cover;
   }
@@ -395,6 +395,6 @@
   }
 
   @include sm {
-    padding: 11.5px 20px;
+    padding: 13.5px 20px;
   }
 }
